--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   --secondary-white-color: #f5f4fa;
   --dark-color: #2f303a;
   --fond-heder: #ffffff;
-  --transition-duration: 1000ms;
+  --transition-duration: 250ms;
 }
 body {
   font-family: roboto, sans-serif;
@@ -683,16 +683,20 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
-
+  padding-top: 40;
+  padding-left: 40px;
+  padding-right: 40px;
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
+
+
 }
 .modal-btn {
   position: absolute;
@@ -706,5 +710,92 @@ p {
   padding: 0;
   border: 1px solid #757575;
   border-radius: 50%;
+  cursor: pointer;
+  background-color: #ffffff;
+
+}
+.register-form-title {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 40px;
+  margin-bottom: 12px;
+  margin-left: 40px;
+  margin-right: 40px;
+  
+}
+.register-form-group {
+  display: flex;
+  flex-direction: column;
+  padding-top: px;
+  margin-bottom: 20px;
+  border: 1px solid red;
+}
+.register-form-agreement {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+} 
+.register-form-field {
+  position: relative;
+  display: block;
+ 
+  margin-bottom: 8px;
+  border: 1px solid green;
+}
+.register-form-field:last-child {
+  margin-bottom: 0px;
+}
+.register-form-label {
+  font-size: 12px;
+  position: absolute;
+  top: 15%;
+  left: 41px;
+  transform: translateY(-150%);
+  display: block;
+  transition: transform var(--transition-duration);
+  border: 1px solid red;
+}
+.register-form-input {
+  width: 100%;
+  height: 45px;
+  padding-left: 45px;
+  padding-right: 45px;
+  border: 1px solid #afb1b8;
+  border-radius: 10px;
+  transition: border-color var(--transition-duration);
+}
+.register-form-input:focus {
+  border-color: #2196f3;
+}
+
+
+
+.register-form-icon {
+  position: absolute;
+  top:  50%;
+  left: 10px;
+  transform: translateY(-50%);
+
+  transition: fill var();
+}
+.register-form-btn {
+  display: block;
+  margin: 0 auto;
+  font-weight: 700;
+  line-height: calc(30 / 16);
+  letter-spacing: 00.06em;
+  color: #ffffff;
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  border: 1px solid #2196f3;
+  font-size: 16px;
+  text-align: center;
+  align-items: center;
+  padding-left: 52px;
+  padding-top: 10px;
+  padding-right: 52px;
+  padding-bottom: 10px;
   cursor: pointer;
 }
