--- a/css/styles.css
+++ b/css/styles.css
@@ -680,12 +680,14 @@ p {
   visibility: hidden;
 }
 .modal {
+  display: flex;
   position: absolute;
   top: 50%;
   left: 50%;
-  padding-top: 40;
+  padding-top: 40px;
   padding-left: 40px;
   padding-right: 40px;
+  padding-bottom: 40px;
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
@@ -695,8 +697,6 @@ p {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
-
-
 }
 .modal-btn {
   position: absolute;
@@ -712,73 +712,87 @@ p {
   border-radius: 50%;
   cursor: pointer;
   background-color: #ffffff;
-
 }
+
 .register-form-title {
   display: block;
   text-align: center;
   font-size: 20px;
-  margin-top: 40px;
-  margin-bottom: 12px;
-  margin-left: 40px;
-  margin-right: 40px;
-  
+  margin-bottom: 12px; 
 }
 .register-form-group {
   display: flex;
   flex-direction: column;
-  padding-top: px;
   margin-bottom: 20px;
-  border: 1px solid red;
+  gap: 10px;
+  /*border: 1px solid red; */
 }
-.register-form-agreement {
+/*.register-form-agreement {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
-} 
+} */
 .register-form-field {
   position: relative;
   display: block;
- 
-  margin-bottom: 20px;
-  border: 1px solid green;
+  /*background-color: red;*/
+  /*padding-bottom: 25px;*/
+  /*border: 1px solid green;*/
 }
-.register-form-field:last-child {
-  margin-bottom: 0px;
-}
-.register-form-label {
-  font-size: 12px;
+.register-form-icon {
   position: absolute;
+  top:  60%;
+  left: 11px;
+  transform: translateY(-40%);
+  transition: fill var(--transition-duration);
+  fill: #212121;
+}
+/*.register-form-field:last-child {
+  margin-bottom: 0px;
+}*/
+.register-form-label {
+font-size: 12px; 
+/*width: 22px;
+line-height: calc( 14px/12px);*/
+color: #757575;
+  
+  /*position: absolute;
   top: 50%;
   left: 42px;
-  transform: translateY(-50%);
+  transform: translateY(-50%);*/
   display: block;
   transition: transform var(--transition-duration);
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
+/*.register-form-input:focus + .register-form-label {
+  transform: translate( -65px,-170%) scale(0.7);
+}*/
 .register-form-input {
   width: 100%;
   height: 45px;
-  padding-left: 45px;
-  padding-right: 45px;
+  padding-left: 40px;
+  /*padding-right: 45px;*/
   border: 1px solid #afb1b8;
   border-radius: 10px;
+  /*background-color: green;*/
   transition: border-color var(--transition-duration);
 }
-.register-form-input:focus + .register-form-icon
- {
-  fill: #ff6c00;
+
+.register-form-input:hover + .register-form-icon {
+  fill: var(--accent-color);
 }
+.register-form-input:focus,
+.register-form-input:hover {
+  border-color: #2196f3;
+}
+
 
 /*.register-form-input:focus ~ .register-form-icon {
   color: #2196f3;
-}
-.register-form-input:focus + .register-form-label
- {
-  transform: translate( -45px, -170% ) scale(0.7);
-}
-.register-form-input:not(:placeholder-shown) ~ .register-form-icon
+}*/
+
+/*.register-form-input:not(:placeholder-shown) ~ .register-form-icon
 
 
 
@@ -786,17 +800,9 @@ p {
 
 
 
-.register-form-icon {
-  position: absolute;
-  top:  50%;
-  left: 10px;
-  transform: translateY(-50%);
-
-  transition: fill var(--transition-duration);
-}
 .register-form-btn {
   display: block;
-  margin: 0 auto;
+  margin: 0px auto;
   font-weight: 700;
   line-height: calc(30 / 16);
   letter-spacing: 00.06em;
