--- a/css/styles.css
+++ b/css/styles.css
@@ -727,12 +727,19 @@ p {
   gap: 10px;
   /*border: 1px solid red; */
 }
-/*.register-form-agreement {
+.register-form-heading {
+  font-size: 12px; 
+  color: #757575;
+  display: block;
+  transition: transform var(--transition-duration);
+  
+}
+.register-form-agreement {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 30px;
-} */
+  /*margin-bottom: 30px;*/
+} 
 .register-form-field {
   position: relative;
   display: block;
@@ -774,7 +781,7 @@ color: #757575;
   padding-left: 40px;
   /*padding-right: 45px;*/
   border: 1px solid #afb1b8;
-  border-radius: 10px;
+  border-radius: 4px;
   /*background-color: green;*/
   transition: border-color var(--transition-duration);
 }
@@ -798,7 +805,37 @@ color: #757575;
 
 /*.register-form-input:not(:placeholder-shown) + .register-form-label*/
 
+.register-form-message {
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 16px;
+  font-size: 12px;
+  font-family: 'Roboto';
+  color: rgba(117, 117, 117, 0.5);
+  letter-spacing: 0.01em;
 
+  /*resize: none;
+  /*outline: transparent;*/
+  /*border: 1px solid #afb1b8;*/
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+}
+.register-form-desc {
+  font-size: 14px;
+  line-height: calc(24px /14px);
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin-bottom: 32px;
+}
+.register-form-link {
+  color: #2196f3;
+  font-size: 14px;
+  line-height: calc(24px /14px);
+  letter-spacing: 0.03em;
+  
+}
 
 .register-form-btn {
   display: block;
