--- a/css/styles.css
+++ b/css/styles.css
@@ -697,6 +697,7 @@ p {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 .modal-btn {
   position: absolute;
@@ -712,13 +713,16 @@ p {
   border-radius: 50%;
   cursor: pointer;
   background-color: #ffffff;
+  
 }
 
 .register-form-title {
   display: block;
   text-align: center;
+  justify-content: center;
   font-size: 20px;
   margin-bottom: 12px; 
+  
 }
 .register-form-group {
   display: flex;
@@ -726,19 +730,24 @@ p {
   margin-bottom: 20px;
   gap: 10px;
   /*border: 1px solid red; */
+  
 }
 .register-form-heading {
   font-size: 12px; 
   color: #757575;
   display: block;
+  margin-bottom: 4px;
   transition: transform var(--transition-duration);
-  
+ 
 }
 .register-form-agreement {
   display: flex;
   align-items: center;
   justify-content: center;
+ 
+  
   /*margin-bottom: 30px;*/
+ 
 } 
 .register-form-field {
   position: relative;
@@ -746,14 +755,16 @@ p {
   /*background-color: red;*/
   /*padding-bottom: 25px;*/
   /*border: 1px solid green;*/
+  
 }
 .register-form-icon {
   position: absolute;
-  top:  60%;
+  top:  65%;
   left: 11px;
   transform: translateY(-40%);
   transition: fill var(--transition-duration);
   fill: #212121;
+ 
 }
 /*.register-form-field:last-child {
   margin-bottom: 0px;
@@ -763,6 +774,8 @@ font-size: 12px;
 /*width: 22px;
 line-height: calc( 14px/12px);*/
 color: #757575;
+
+margin-bottom: 4px;
   
   /*position: absolute;
   top: 50%;
@@ -784,6 +797,7 @@ color: #757575;
   border-radius: 4px;
   /*background-color: green;*/
   transition: border-color var(--transition-duration);
+  outline-color: #2196f3;
 }
 
 .register-form-input:hover + .register-form-icon {
@@ -814,6 +828,7 @@ color: #757575;
   font-family: 'Roboto';
   color: rgba(117, 117, 117, 0.5);
   letter-spacing: 0.01em;
+  outline-color: #2196f3;
 
   /*resize: none;
   /*outline: transparent;*/
@@ -855,4 +870,73 @@ color: #757575;
   padding-right: 52px;
   padding-bottom: 10px;
   cursor: pointer;
+}
+.footer-subscription {
+display: flex;
+justify-content: center;
+align-items: flex-end;
+gap:12px;
+}
+.footer-label {
+outline: 1px solid red;
+display: flex;
+flex-direction: row;
+
+}
+.footer-title {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  font-size: 14px;
+  margin-bottom: 12px;  
+  line-height: calc(16px/14px);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+
+}
+.footer-mail {
+  display: flex;
+  
+  /*position: absolute;
+  /*bottom: 50%;
+  left: 0;*/
+  font-size: 16px;
+  line-height: calc(20px/16px);
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  transition: border-color var(--transition-duration);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  
+}
+.footer-btn {
+  display: block;
+  
+  margin: 0px auto;
+  font-weight: 700;
+  line-height: calc(30 / 16);
+  letter-spacing: 00.06em;
+  color: #ffffff;
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  border: 1px solid #2196f3;
+  font-size: 16px;
+  text-align: center;
+  align-items: center;
+  padding-left: 52px;
+  padding-top: 10px;
+  padding-right: 52px;
+  padding-bottom: 10px;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.footer-icon {
+
 }
