--- a/css/styles.css
+++ b/css/styles.css
@@ -875,28 +875,30 @@ margin-bottom: 4px;
 display: flex;
 justify-content: center;
 align-items: flex-end;
-gap:12px;
+margin-left: 93px;
+outline: 1px solid red;
 }
 .footer-label {
-outline: 1px solid red;
+
 display: flex;
 flex-direction: row;
 
 }
 .footer-title {
-  display: block;
+  /*display: block;
   text-align: center;
-  justify-content: center;
+  justify-content: center;*/
   font-size: 14px;
   margin-bottom: 12px;  
   line-height: calc(16px/14px);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #FFFFFF;
-
+  font-weight: 700;
+  margin-bottom: 20px;
 }
 .footer-mail {
-  display: flex;
+  /*display: flex;
   
   /*position: absolute;
   /*bottom: 50%;
@@ -912,6 +914,7 @@ flex-direction: row;
   border-radius: 4px;
   transition: border-color var(--transition-duration);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  box-sizing: border-box;
   
 }
 .footer-btn {
