--- a/css/styles.css
+++ b/css/styles.css
@@ -591,7 +591,6 @@ p {
 .clients-icon {
   fill: currentColor;
 }
-
 .title-welcome {
   display: block;
   font-weight: 700;
@@ -680,7 +679,7 @@ p {
   visibility: hidden;
 }
 .modal {
-  display: flex;
+  display: block;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -713,49 +712,41 @@ p {
   border-radius: 50%;
   cursor: pointer;
   background-color: #ffffff;
-  
 }
-
 .register-form-title {
   display: block;
   text-align: center;
   justify-content: center;
   font-size: 20px;
-  margin-bottom: 12px; 
-  
+  margin-bottom: 12px;  
 }
 .register-form-group {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
-  gap: 10px;
-  /*border: 1px solid red; */
-  
+  gap: 10px; 
 }
 .register-form-heading {
   font-size: 12px; 
   color: #757575;
   display: block;
   margin-bottom: 4px;
-  transition: transform var(--transition-duration);
- 
+  transition: transform var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
+  outline-color: #2196f3;
+}
+.register-form-heading:focus,
+.register-form-heading:hover {
+  outline-color: #2196f3;
 }
 .register-form-agreement {
   display: flex;
-  align-items: center;
+  gap: 9px;
+  align-items: top;
   justify-content: center;
- 
-  
-  /*margin-bottom: 30px;*/
- 
 } 
 .register-form-field {
   position: relative;
-  display: block;
-  /*background-color: red;*/
-  /*padding-bottom: 25px;*/
-  /*border: 1px solid green;*/
-  
+  display: block; 
 }
 .register-form-icon {
   position: absolute;
@@ -763,39 +754,22 @@ p {
   left: 11px;
   transform: translateY(-40%);
   transition: fill var(--transition-duration);
-  fill: #212121;
- 
+  fill: #212121; 
 }
-/*.register-form-field:last-child {
-  margin-bottom: 0px;
-}*/
 .register-form-label {
-font-size: 12px; 
-/*width: 22px;
-line-height: calc( 14px/12px);*/
-color: #757575;
-
-margin-bottom: 4px;
-  
-  /*position: absolute;
-  top: 50%;
-  left: 42px;
-  transform: translateY(-50%);*/
+  font-size: 12px; 
+  color: #757575;
+  margin-bottom: 4px;
   display: block;
   transition: transform var(--transition-duration);
-  /*border: 1px solid red;*/
+ 
 }
-/*.register-form-input:focus + .register-form-label {
-  transform: translate( -65px,-170%) scale(0.7);
-}*/
 .register-form-input {
   width: 100%;
   height: 45px;
   padding-left: 40px;
-  /*padding-right: 45px;*/
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  /*background-color: green;*/
   transition: border-color var(--transition-duration);
   outline-color: #2196f3;
 }
@@ -807,18 +781,6 @@ margin-bottom: 4px;
 .register-form-input:hover {
   border-color: #2196f3;
 }
-
-
-/*.register-form-input:focus ~ .register-form-icon {
-  color: #2196f3;
-}*/
-
-/*.register-form-input:not(:placeholder-shown) ~ .register-form-icon
-
-
-
-/*.register-form-input:not(:placeholder-shown) + .register-form-label*/
-
 .register-form-message {
   display: block;
   width: 100%;
@@ -829,13 +791,8 @@ margin-bottom: 4px;
   color: rgba(117, 117, 117, 0.5);
   letter-spacing: 0.01em;
   outline-color: #2196f3;
-
-  /*resize: none;
-  /*outline: transparent;*/
-  /*border: 1px solid #afb1b8;*/
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-
 }
 .register-form-desc {
   font-size: 14px;
@@ -849,9 +806,7 @@ margin-bottom: 4px;
   font-size: 14px;
   line-height: calc(24px /14px);
   letter-spacing: 0.03em;
-  
-}
-
+  }
 .register-form-btn {
   display: block;
   margin: 0px auto;
@@ -873,21 +828,14 @@ margin-bottom: 4px;
 }
 .footer-subscription {
 display: flex;
-justify-content: center;
-align-items: flex-end;
+justify-content: flex-start;
+align-items: flex-start;
 margin-left: 93px;
-outline: 1px solid red;
-}
-.footer-label {
-
-display: flex;
-flex-direction: row;
-
 }
 .footer-title {
-  /*display: block;
-  text-align: center;
-  justify-content: center;*/
+  display: block;
+  text-align: start;
+  justify-content: center;
   font-size: 14px;
   margin-bottom: 12px;  
   line-height: calc(16px/14px);
@@ -898,11 +846,6 @@ flex-direction: row;
   margin-bottom: 20px;
 }
 .footer-mail {
-  /*display: flex;
-  
-  /*position: absolute;
-  /*bottom: 50%;
-  left: 0;*/
   font-size: 16px;
   line-height: calc(20px/16px);
   width: 358px;
@@ -914,12 +857,13 @@ flex-direction: row;
   border-radius: 4px;
   transition: border-color var(--transition-duration);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  box-sizing: border-box;
-  
+  box-sizing: border-box; 
 }
-.footer-btn {
-  display: block;
-  
+.footer-list {
+  display: flex;
+  gap: 12px;
+}
+.footer-btn { 
   margin: 0px auto;
   font-weight: 700;
   line-height: calc(30 / 16);
@@ -939,7 +883,4 @@ flex-direction: row;
   display: flex;
   gap: 10px;
   align-items: center;
-}
-.footer-icon {
-
 }
