--- a/css/styles.css
+++ b/css/styles.css
@@ -754,6 +754,7 @@ p {
   left: 11px;
   transform: translateY(-40%);
   transition: fill var(--transition-duration);
+  transition: fill var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
   fill: #212121; 
 }
 .register-form-label {
@@ -761,8 +762,7 @@ p {
   color: #757575;
   margin-bottom: 4px;
   display: block;
-  transition: transform var(--transition-duration);
- 
+  transition: transform var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
 }
 .register-form-input {
   width: 100%;
@@ -770,8 +770,8 @@ p {
   padding-left: 40px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: border-color var(--transition-duration);
-  outline-color: #2196f3;
+  transition: border-color var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
+  outline-color: red;
 }
 
 .register-form-input:hover + .register-form-icon {
@@ -855,7 +855,7 @@ margin-left: 93px;
   background-color: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  transition: border-color var(--transition-duration);
+  transition: border-color var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   box-sizing: border-box; 
 }
